# toy_workflows

./: .gitignore  INSTALLATION.md  LICENSE  README.md  notebook.ipynb  pyproject.toml  requirements.txt
src/example_package_abhijeet095/: numbers.py  string.py
tests/: test_numbers.py  test_strings.py
